--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -18,5 +18,5 @@
     <% end %>
   </div>
 
-  <%= render @feed_contents %>
+  <%= render partial: "questions/question", collection: @questions %>
 <% end %>
